--- a/notes/text-adventure-games/adventure-1/index.html
+++ b/notes/text-adventure-games/adventure-1/index.html
@@ -49,6 +49,20 @@
     </div>
  
     <div id="event"></div>
+    
+    <!-- 
+
+Challenges 
+
+1) Get the tutorial working 
+2) Play the game
+3) Check for errors.
+  - Check for any errors you might find
+  - Play test and make sure all of the features in the game are working. 
+4) Create classes to represent the objects used in the game
+
+    -->
+    
     <script src="js/Event.js"></script>
     <script src="js/Caravan.js"></script>
     <script src="js/UI.js"></script>
