Converted Oregon Trail to Clss Objects

--- a/notes/text-adventure-games/adventure-1/index.html
+++ b/notes/text-adventure-games/adventure-1/index.html
@@ -35,11 +35,17 @@ Repls illustrate concepts used in tutorial projects and challenges.
   - adding keys and values 
   - removing keys and values 
 - Loops 
+  - Loop Types 
+    - for 
+    - for in 
+    - forEach
+    - while
   - Counting forwards 
   - Counting backwards 
   - starting at a value
   - Looping through all of the items in an array 
   - Looping through all keys in an object
+  - Loop through keys to make or copy an object
 - OOP - Class syntax and concepts
   - Defining a class
   - Defining properties 
