--- a/notes/text-adventure-games/adventure-1/index.html
+++ b/notes/text-adventure-games/adventure-1/index.html
@@ -17,7 +17,16 @@ Game from the tutorial based on Oregon Trail
   - Replace var with let, and const
   - Object deconstruction
 5) OOP - Define class Objects for Caravan, Event, Game, and UI
-  
+6) Make a class to represent the stat box. 
+   - Better to have an object that represents this element and it's 
+   children. Have this be a dependency of UI
+7) Make a class for the Fight box
+   - Better to have this be an object that is a dependency of the
+   UI class. 
+8) Make a class to represent the Shop box
+   - Better as it's own class dependency of UI
+9) Make a class to represent the status/history box thing.
+   - Yeah it's better as a class. 
   
 Lessons Ideas 
 
