--- a/notes/text-adventure-games/adventure-1/index.html
+++ b/notes/text-adventure-games/adventure-1/index.html
@@ -6,28 +6,61 @@ https://gamedevacademy.org/js13kgames-tutorial/
   
 Game from the tutorial based on Oregon Trail
 
+The project is presented with Repls covering all of the base knowledge
+Loops functions conditionals classes etc. Challenges ask students to 
+modify and improve on the starter project, while stretch challenges 
+give students who already have the base knowledge something to work on.
+
 ## Challenges 
 
 1) Get the tutorial working 
 2) Play the game
+  - Play the game a few times. 
+  - Get into it
+  - Have fun
+  - Get to oregon!
+  - Fight the bandits
+  - Run away from the bandits
+  - Ox Flu Sucks!
 3) Check for errors.
   - Check for any errors you might find
   - Play test and make sure all of the features in the game are working. 
-4) Update the code to more modern and easier to understand syntax
+4) Add some styles 
+  - Use your CSS skills to improve the look of the game. 
+5) Update the code to more modern and easier to understand syntax
   - Replace var with let, and const
   - Object deconstruction
-5) OOP - Define class Objects for Caravan, Event, Game, and UI
-6) Make a class to represent the stat box. 
+6) OOP - Define class Objects for Caravan, Event, Game, and UI
+7) Make a class to represent the stat box. 
    - Better to have an object that represents this element and it's 
    children. Have this be a dependency of UI
-7) Make a class for the Fight box
+8) Make a class for the Fight box
    - Better to have this be an object that is a dependency of the
    UI class. 
-8) Make a class to represent the Shop box
+9) Make a class to represent the Shop box
    - Better as it's own class dependency of UI
-9) Make a class to represent the status/history box thing.
+10) Make a class to represent the status/history box thing.
    - Yeah it's better as a class. 
-  
+11) Could this use the MVC architecture? What about MVVM?
+  - The data classes like Caravan, EventType, and Product represent Model Data
+  - Classes like Game and UI represent controllers. 
+  - DOM elements, and or a class that holds them represent a view. 
+12) Look at the Numbers
+  - Examine the numbers and the probablities. 
+  - Play with the numbers make changes and play test
+  - 
+13) Display a game over screen that summarizes the game that just completed. Show:
+  - Number of mniles covered 
+  - The number of days traveled
+  - The number of crew to survive the trip
+  - Number of oxen to make the trip
+  - Stretch goals 
+    - the number of Bandit attacks 
+    - the number of crew killed
+    - the number of oxen lost on route
+    - the units of food eaten
+      
+
 Lessons Ideas 
 
 Repls illustrate concepts used in tutorial projects and challenges. 
