--- a/Slides/Lesson-01.html
+++ b/Slides/Lesson-01.html
@@ -1,65 +1,66 @@
-<!-- .slide: data-background="./Images/header.svg" data-background-repeat="none" data-background-size="40% 40%" data-background-position="center 10%" class="header" -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
+    <title>Syllabus Template Slides</title>
+    <link rel="stylesheet" href="./css/reveal.css" />
+    <link rel="stylesheet" href="./css/theme/black.css" id="theme" />
+    <link rel="stylesheet" href="./css/highlight/zenburn.css" />
+    <link rel="stylesheet" href="./css/print/paper.css" type="text/css" media="print" />
+    <link rel="stylesheet" href="./assets/Reveal/makeschool.css" />
+
+    <script>
+      document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>');
+    </script>
+  </head>
+  <body>
+    <div class="reveal">
+      <div class="slides"><section  data-markdown><script type="text/template"><!-- .slide: data-background="./Images/header.svg" data-background-repeat="none" data-background-size="40% 40%" data-background-position="center 10%" class="header" -->
 # FEW 1.2 - Lesson 1 - Break Out
 
 <!-- Put a link to the slides so that students can find them -->
 
-➡️ [**Slides**](../Slides/Lesson-01.html#/)
-
-<!-- > -->
-
+➡️ [**Slides**](/Syllabus-Template/Slides/Lesson1.html ':ignore')
+</script></section><section  data-markdown><script type="text/template">
 ## Class Learning Objectives
 
 The goal of this class is to improve and develop your JavaScript skills and knowledge and to further develop your skills in software development. 
 
 - Write quality modern JS
 - Use functions and variables to create front end applications
-
-<!-- > -->
-
+</script></section><section  data-markdown><script type="text/template">
 ## Your Goals
 
 These are the two goals that will bring you success. 
 
 - Building Portfolio Projects
 - Master Learning Objectives
-
-<!-- > -->
-
+</script></section><section  data-markdown><script type="text/template">
 Portfolio projects are what get you noticed. It's often the reason people get invited to job interviews.
 
 You should have two portfolio projects that show off your front end skills at the end of 7 weeks. Building these is your goal. I will present ideas and projects, you need to take them to completion. 
-
-<!-- > -->
-
+</script></section><section  data-markdown><script type="text/template">
 ### What are Learning Objectives? 
 
 Learning objectives are the concepts and ideas that you need to know to claim mastery of a subject. 
 
 Learning Objectives are often skills that are related to success at job interviews and on the job. 
-
-<!-- > -->
-
+</script></section><section  data-markdown><script type="text/template">
 When you understand a learning objective you will be able to explain it and put it into practice. 
-
-<!-- > -->
-
+</script></section><section  data-markdown><script type="text/template">
 **There will be learning objectives for each class.** You should test your knowledge by explaining the concepts to someone else, implement the learning objectives in code when the learning objectives are code. Some objectives are larger overarching concepts, in these cases, you should identify the learning objective in your code, your project as a whole, or in the larger software ecosystem or the world at large. 
-
-<!-- > -->
-
+</script></section><section  data-markdown><script type="text/template">
 **If you are having trouble understanding a learning objective you need to take action.** Discuss the topic with another student, talk with a TA, bring questions to class, talk to an instructor during lab or office hours. 
-
-<!-- > -->
-
+</script></section><section  data-markdown><script type="text/template">
 ## Projects 
 
 The goal is to produce something that shows your skills. 
 
 - Breakout - This is a JavaScript implementation of the arcade game Breakout 
 - Custom/Contractor Project with React - This will be a web site built with React and is open to your ideas and input. 
-
-<!-- > -->
-
+</script></section><section  data-markdown><script type="text/template">
 ## Class 1 - Breakout tutorial
 
 The Breakout tutorial is a great JS practice project. It makes use of many of the core concepts found in every programming language. 
@@ -71,9 +72,7 @@ The Breakout tutorial is a great JS practice project. It makes use of many of th
  - if else statements
 - Arrays
 - Objects 
-
-<!-- > -->
-
+</script></section><section  data-markdown><script type="text/template">
 These things are core to programming in general. Learn these things here and you can apply them anywhere. 
 
 After completing the tutorial you will improve the code applying modern techniques and best practices. This will include: 
@@ -81,15 +80,11 @@ After completing the tutorial you will improve the code applying modern techniqu
 - Using ES6 JS ideas 
 - Linting to professional standards 
 - Using build systems and bundling
-
-<!-- > -->
-
+</script></section><section  data-markdown><script type="text/template">
 ### Contractor/Custom project 
 
 The Custom/Constractor project will be built with React. Here you will put all of the things from the first project into something that is built using the one of the most common and popular libraries in use today.
-
-<!-- > -->
-
+</script></section><section  data-markdown><script type="text/template">
 ## Learning Objectives
 
 Today's Learning Objectives are: 
@@ -97,18 +92,14 @@ Today's Learning Objectives are:
 1. Use the JavaScript language
 1. Describe and use canvas
 1. Identify functional logic and program flow
-
-<!-- > -->
-
+</script></section><section  data-markdown><script type="text/template">
 ## Break Out
 
 - What is Breakout?
 - How does the tutorial game work? 
  - draws all of the game elements with canvas
  - What are cartesian coordinates? 
-
-<!-- > -->
-
+</script></section><section  data-markdown><script type="text/template">
 - Draw Break game with Sketch
  - How big is the desktop: 1440 x 1024
  - How big is the game: 480 x 320
@@ -120,9 +111,7 @@ Today's Learning Objectives are:
  - paddle: 75 x 10
 
 **Exercise 1:** Open sketch and draw Breakout 
-
-<!-- > -->
-
+</script></section><section  data-markdown><script type="text/template">
 ## Canvas 
 
 Canvas is a JS API that allows you to draw bitmapped graphics. Use it to create special effects and games. Bitmapped graphics draw faster and allow for pixel-level control of an image.
@@ -132,9 +121,7 @@ Canvas is a tag:
 ```html
 <canvas id="myCanvas"></canvas>
 ```
-
-<!-- > -->
-
+</script></section><section  data-markdown><script type="text/template">
 Think of canvas as the `<img>` tag with the ability to draw on it. 
 
 Like the `<img>` tag you should give `<canvas>` width and height. 
@@ -142,9 +129,7 @@ Like the `<img>` tag you should give `<canvas>` width and height.
 ```html
 <canvas id="myCanvas" width="400" height="300"></canvas>
 ```
-
-<!-- > -->
-
+</script></section><section  data-markdown><script type="text/template">
 To draw on canvas you need to get a canvas context.
 
 ```js
@@ -156,9 +141,7 @@ var ctx = canvas.getContext("2d");
 
 - **Q:** What's a method?
 - **Q:** What's an Object?
-
-<!-- > -->
-
+</script></section><section  data-markdown><script type="text/template">
 Draw on your canvas using the canvas API. The tutorial uses a few of the APIs methods.
 
 Drawing with canvas generally follows these steps: 
@@ -170,9 +153,7 @@ Drawing with canvas generally follows these steps:
 - fill and stroke your path
 
 Here are a few examples...
-
-<!-- > -->
-
+</script></section><section  data-markdown><script type="text/template">
 **Draw a rectangle**
 
 ```js 
@@ -186,9 +167,7 @@ ctx.fill() // fills the current path
 - **Q:** How big is the rectangle? 
 - **Q:** Where is it in the canvas?
 - **Try it:** (in theory) draw a rectangle in sketch and get the coordinates and size. 
-
-<!-- > -->
-
+</script></section><section  data-markdown><script type="text/template">
 **Draw a circle**
 
 ```js
@@ -202,9 +181,7 @@ ctx.closePath()
 - **Q:** How big is the circle? 
 - **Q:** Where is the circle? 
 - **Try it:** (in theory) look at your skecth and find the ball. Get it's radius and coordinates. 
-
-<!-- > -->
-
+</script></section><section  data-markdown><script type="text/template">
 **Clear Rectangle**
 
 ```js
@@ -212,21 +189,15 @@ ctx.clearRect(x, y, width, height)
 ```
 
 - **Q:** What area of the screen is being cleared? 
-
-<!-- > -->
-
+</script></section><section  data-markdown><script type="text/template">
 Million Dollar Homepage! Canvas Practice.
 
 https://github.com/soggybag/canvas-practice
-
-<!-- > -->
-
+</script></section><section  data-markdown><script type="text/template">
 ## Break
 
 Take a 10-minute break and measure the world in pixels. 
-
-<!-- > -->
-
+</script></section><section  data-markdown><script type="text/template">
 ## Lab 60 mins
 
 Your goal is to complete the tutorial: https://developer.mozilla.org/en-US/docs/Games/Tutorials/2D_Breakout_game_pure_JavaScript
@@ -238,23 +209,17 @@ This tutorial is 10 pages. At the end of every page is the completed source code
 The code in the tutorial is very naive. You will be updating the code to modern standards in the next assignment.
 
 **Come back to class at: ...**
-
-<!-- > -->
-
+</script></section><section  data-markdown><script type="text/template">
 ## Review Breakout
 
 - Show progress
 - Review Objectives
 - Questions 
-
-<!-- > -->
-
+</script></section><section  data-markdown><script type="text/template">
 ## Homework: Breakout Tutorial 
 
 Follow the instructions [here](Assignments/Assignment-1-Break-Out.md)
-
-<!-- > -->
-
+</script></section><section  data-markdown><script type="text/template">
 ## Additional Resources
 
 1. [Types and Values ](https://eloquentjavascript.net/01_values.html)
@@ -265,9 +230,7 @@ Follow the instructions [here](Assignments/Assignment-1-Break-Out.md)
 1. [If else](https://eloquentjavascript.net/02_program_structure.html#h_wpz5oi2dy7)
 1. [For loops](https://eloquentjavascript.net/02_program_structure.html#h_oupMC+5FKN)
 1. [Canvas](https://eloquentjavascript.net/17_canvas.html)
-
-<!-- > -->
-
+</script></section><section  data-markdown><script type="text/template">
 ## Minute-by-Minute 2:45
 
 | **Elapsed** | **Time** | **Activity** |
@@ -282,3 +245,54 @@ Follow the instructions [here](Assignments/Assignment-1-Break-Out.md)
 | 2:40 | 0:10 | Review Homework |
 | 2:45 | 0:05 | Review objectives |
 
+</script></section></div>
+    </div>
+
+    <script src="./js/reveal.js"></script>
+
+    <script>
+      function extend() {
+        var target = {};
+        for (var i = 0; i < arguments.length; i++) {
+          var source = arguments[i];
+          for (var key in source) {
+            if (source.hasOwnProperty(key)) {
+              target[key] = source[key];
+            }
+          }
+        }
+        return target;
+      }
+
+      // Optional libraries used to extend on reveal.js
+      var deps = [
+        { src: './plugin/markdown/marked.js', condition: function() { return !!document.querySelector('[data-markdown]'); } },
+        { src: './plugin/markdown/markdown.js', condition: function() { return !!document.querySelector('[data-markdown]'); } },
+        { src: './plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+        { src: './plugin/zoom-js/zoom.js', async: true },
+        { src: './plugin/notes/notes.js', async: true },
+        { src: './plugin/math/math.js', async: true }
+      ];
+
+      // default options to init reveal.js
+      var defaultOptions = {
+        controls: true,
+        progress: true,
+        history: true,
+        center: true,
+        transition: 'default', // none/fade/slide/convex/concave/zoom
+        dependencies: deps
+      };
+
+      // options from URL query string
+      var queryOptions = Reveal.getQueryHash() || {};
+
+      var options = extend(defaultOptions, {"controls":true,"progress":true,"autoPlayMedia":false,"slideNumber":"c/t","showSlideNumber":"all","controlsTutorial":true,"controlsLayout":"edges","transition":"slide","transitionSpeed":"medium","minScale":0.5,"maxScale":3}, queryOptions);
+    </script>
+
+
+    <script>
+      Reveal.initialize(options);
+    </script>
+  </body>
+</html>
