--- a/Slides/Lesson-01.html
+++ b/Slides/Lesson-01.html
@@ -22,7 +22,7 @@
 
 <!-- Put a link to the slides so that students can find them -->
 
-➡️ [**Slides**](/Syllabus-Template/Slides/Lesson1.html ':ignore')
+➡️ [**Slides**](../Slides/Lesson-01.html#/)
 </script></section><section  data-markdown><script type="text/template">
 ## Class Learning Objectives
 
@@ -218,7 +218,7 @@ The code in the tutorial is very naive. You will be updating the code to modern 
 </script></section><section  data-markdown><script type="text/template">
 ## Homework: Breakout Tutorial 
 
-Follow the instructions [here](Assignments/Assignment-1-Break-Out.md)
+Follow the instructions [here](../Assignments/Assignment-1-Break-Out.md)
 </script></section><section  data-markdown><script type="text/template">
 ## Additional Resources
 
