--- a/Slides/Lesson-02.html
+++ b/Slides/Lesson-02.html
@@ -24,13 +24,26 @@
 
 ➡️ [**Slides**](/Syllabus-Template/Slides/Lesson1.html ':ignore')
 </script></section><section  data-markdown><script type="text/template">
-# Overview
+## Overview
 
-This class will look at the JS you wrote in the tutorial and improve and upgrade it to modern and professional standards. 
+This class will look at the JS you wrote in the tutorial and improve and upgrade it to modern and professional standards.
 </script></section><section  data-markdown><script type="text/template">
-## Modern JS 
+## Code Quality 
 
-You should be using the most up to date JS in your work. It's what will be expected at job interviews and in the professional environment. 
+What is code quality?
+
+What does high quality code look like?
+
+How do you write better quality code?
+
+**Discuss this with your pair**
+</script></section><section  data-markdown><script type="text/template">
+- Consistent style 
+ - Reads well to Everyone on your team 
+ - Uses consistent syntax 
+    - `{}` or `new Object()`
+- Uses up to date best practices 
+ - e.g. `const` > `let` > `var`
 </script></section><section  data-markdown><script type="text/template">
 ## Learning Objectives
 
@@ -38,41 +51,54 @@ You should be using the most up to date JS in your work. It's what will be expec
 1. Modern JS best practice
 1. Linting with a style guide
 </script></section><section  data-markdown><script type="text/template">
-# Code Quality 
+### Why is this important?
+
+You should be using the most up to date JS in your work. Its expected in the professional environment. 
+
+We will be using the Airbnb JS style guide. This guide was developed at Airbnb and is used by their engineering team. It defines the coding style expected from Airbnb engineers.
+
+**Using this style guide is profesional best practice, it will make you code better, and make you write higher quality code.**
 </script></section><section  data-markdown><script type="text/template">
-- Consistent style 
- - Looks good 
- - Reads well 
- - to everyone on the team
-- Uses best practices 
- - e.g. const > let > var
-</script></section><section ><section data-markdown><script type="text/template">
-# ESLint
+## Linting
+</script></section><section  data-markdown><script type="text/template">
+**Lint** was the name of a program that flagged suspicious non portable constructs in C code that were likely to cause bugs. The term is now applied generically to tools that flag suspicious code and inconsistent style in any language.
+</script></section><section  data-markdown><script type="text/template">
+### ESLint
 
-Make a New Branch in your Break Out repo. You'll be applying all of the changes for this assignment there. 
+**ESLint** is a tool that "lints" your JavaScript. It has many options and is widely used. 
 
+You will set up ESLint with a Style guide used by profesionals. 
+
+**ESlint has two parts:**
+
+1. A plugin/extension for your code editor
+1. A package with options specific to your project
+</script></section><section  data-markdown><script type="text/template">
 **Install eslint in your project**
 
 https://eslint.org/docs/user-guide/getting-started
-
-Setup npm:
+</script></section><section  data-markdown><script type="text/template">
+**Setup npm:**
 
 ```
 npm init -y
 ```
 
-Install ESLint:
+
+**Install ESLint:**
 
 ```
 npm install eslint --save-dev
 ```
 
-Setup a config file. Use the answers below as you follow the setup process. 
+**Setup a config file.**
+
+Use the answers below as you follow the setup process. 
 
 ```
 npx eslint --init
 ```
-
+</script></section><section  data-markdown><script type="text/template">
 Choose these options: 
 
 - To check syntax, find problems, and enforce code style
@@ -84,12 +110,14 @@ Choose these options:
 - Airbnb: https://github.com/airbnb/javascript 
 - JavaScript
 - Would you like to install them now with npm? Yes
-
+</script></section><section  data-markdown><script type="text/template">
 **Install ESLint in your code editor**
 
 You'll need to install ESLint in your code editor. Go to Packages/Plugins/Extensions and search for ESLint and install. 
-</script></section><section data-markdown><script type="text/template">
-## Lint your code
+</script></section><section  data-markdown><script type="text/template">
+### Lint your code
+
+(If you haven't already)
 
 **Move your code into a JS file**
 
@@ -98,7 +126,7 @@ The linter will only lint files with the `.js` file extension. Move your code in
 Then link that to your project. In index.html use: 
 
 `<script src="index.js">__SCRIPT_END__`
-
+</script></section><section  data-markdown><script type="text/template">
 **Start Linting**
 
 Take a look at `index.js`. There should be some red lines highlighting sections of your code. These are linting errors. 
@@ -106,38 +134,40 @@ Take a look at `index.js`. There should be some red lines highlighting sections 
 Move the cursor over these and you'll see notes from the linter telling you how your code doesn't meet the requirements of the style guide. 
 
 Your job id to figure these out and solve the problems. Your deeper and more important goal job is to do your best to understand why professionals would ask for these changes. 
-
+</script></section><section  data-markdown><script type="text/template">
 Take a look at the errors you see and answer these questions: 
 
 - What changes is the linter asking for? 
 - Why these changes?
-</script></section><section data-markdown><script type="text/template">
-## Modern JS 
+</script></section><section  data-markdown><script type="text/template">
+## Modern JS
 
-Here is a list of common changes required by the AirBnB style guide. You can read their guide here: 
+You can read about the Airbnb style guide here: 
 
 https://github.com/airbnb/javascript#types
 
 Take a look at the style guide. Pair and discuss.
-</script></section></section><section ><section data-markdown><script type="text/template">
+</script></section><section  data-markdown><script type="text/template">
 ### JS - Const, Let and Var
 
-Best practice: const > let > var. 
 
-Why? const and let are block-scoped and are not hoisted. This makes there use more predictable. 
-
-const defines a value that can not be reassigned. Knowing a value will not be reassigned allows the JavaScript engine to operate more efficiently. It also adds safety to your program. 
-
-## JS - Template Strings 
-
-Best Practice use template literals over the + for concatenation. 
+Bad 
 
 ```JS
-const name = 'joe'
-console.log(`hello ${name}`) // concatenate with template literal
+var score = 0
 ```
 
-## JS - Functions and Hoisting
+Goode 
+
+```JS
+let score = 0
+```
+
+Why? `const` and `let` are block-scoped and are not hoisted. This makes your code more predictable.
+
+`const` defines a value that can not be reassigned. Knowing a value will not be reassigned makes code more efficient. It also adds safety to your program. 
+</script></section><section  data-markdown><script type="text/template">
+### JS - Functions and Hoisting
 
 JavaScript is processed in two steps. In the first step, the JavaScript engine examines code and processes it. In the second step, the code is executed. 
 
@@ -147,27 +177,57 @@ One of the processed that happens in the first step is Hoisting. Hoisting effect
 - functions declarations
 
 https://repl.it/classroom/invite/kHcWR5n
-</script></section><section data-markdown><script type="text/template">
-# Lab
+</script></section><section  data-markdown><script type="text/template">
+### JS - Template Strings 
 
+Best Practice use template literals over the + for concatenation. 
+
+Bad!
+
+```JS 
+const name = 'joe'
+console.log('hello' + name) // concatenate with +
+```
+
+Good
+
+```JS
+const name = 'joe'
+console.log(`hello ${name}`) // concatenate with template literal
+```
+</script></section><section  data-markdown><script type="text/template">
+### What's wrong with "" + ?
+
+The + is used for addition and for concatenation. This makes it ambiguous sometiems to developers and to JavaScript engine.
+
+```JS
+const str = "Score:" + score + 10  // Score:1010
+```
+
+This is a common source of problems in JS
+</script></section><section  data-markdown><script type="text/template">
+## Lab
+
+- Install ESlint 
+- Install the Aitbnb styleguide
+- Make a new branch for changes
 - Solve all of the linter errors
 - Consult with your peers if you can't solve an error
 - Take notes for unsolved errors
 - Try the stretch challenges 
-</script></section></section><section  data-markdown><script type="text/template">
-<!-- .slide: data-background="#087CB8" -->
-# BREAK
 </script></section><section  data-markdown><script type="text/template">
-# After Lab
+<!-- .slide: data-background="#087CB8" -->
+## BREAK
+</script></section><section  data-markdown><script type="text/template">
+## After Lab
 
 List linter suggestions on the board. Split into groups of 4 to discuss these. Each group decides why these suggestions were included in the style guide. 
 
 - What changes did the linter ask for? 
 - Why do you think these changes? 
 - What were the problems that couldn't be solved?
-
 </script></section><section  data-markdown><script type="text/template">
-# Homework
+## Homework
 
 - [Assignment 2 ESLint.md](Assignments/Assignment-2-EsLint.md)
 </script></section><section  data-markdown><script type="text/template">
