--- a/Slides/Lesson-03.html
+++ b/Slides/Lesson-03.html
@@ -26,72 +26,225 @@
 </script></section><section  data-markdown><script type="text/template">
 ## Why learn JS? 
 
-JavaScript is one of the most important languages in use today. It's ubiquitous, in everything, and used everwhere. The language has also been improved recently. It's a great time to learn JS. 
+JavaScript is one of the most important languages in use today. It's ubiquitous, in everything, and used everywhere. The language has also been improved recently. It's a great time to learn JS. 
 </script></section><section  data-markdown><script type="text/template">
-## Learning Objectives (5 min)
+## Learning Objectives
 
 1. Use Loops 
 1. Use Arrays
 1. Use Objects
 1. Conditional statements
-1. Solve Problem
+1. Solve Problems
 </script></section><section  data-markdown><script type="text/template">
 # Discuss Break tutorial
 
-- How does the break out game work general overview? 
-- Application state is the data that describes the state of your application. How does break out define it's application state?
-- What areas of the break out code are confusing? 
+Discuss these questions with someone else in class:
+
+- How does the break out game work? (general overview)
+    - Code flow what happens in what order?
+- Application state is the data that describes the state of your application. 
+    - How does break out define its application state?
+    - The values stored by the game and how are they updated?
 </script></section><section  data-markdown><script type="text/template">
 # loops 
 
-The great things about comnputers is they are happy to do things over and over again. A computer will will always do something the same way each time. It's one of the reasons we use computers to do things! 
+The great thing about computers is they are happy to do things over and over again. A computer will always do something the same way each time. It's one of the reasons we use computers to do things! 
 
-https://repl.it/classroom/invite/k0Yhr38
-</script></section><section ><section data-markdown><script type="text/template">
+- Where are loops used in Break Out?
+- How are the loops used?
+
+<!-- https://repl.it/classroom/invite/k0Yhr38 -->
+</script></section><section  data-markdown><script type="text/template">
 # Arrays
 
-Here are some array problems. These are similar to interview questions. 
+Arrays store collections of related data in an a list with each element at an index.  
 
-https://repl.it/classroom/invite/Z6pW6Gv
-</script></section><section data-markdown><script type="text/template">
+- How are arrays used by Break Out?
+- What do the Arrays store? 
+
+<!-- https://repl.it/classroom/invite/Z6pW6Gv -->
+</script></section><section  data-markdown><script type="text/template">
 # Objects 
 
-Practice with Objects. 
+Objects are collections of related data. Each value is stored at a key or label.  
 
-https://repl.it/classroom/invite/STIb5DY
-</script></section><section data-markdown><script type="text/template">
-## Conditional 
+- Where are objects used? 
+- How are the Objects used? 
+- Why not use an array?
 
+<!-- https://repl.it/classroom/invite/STIb5DY -->
+</script></section><section  data-markdown><script type="text/template">
+# Functions
 
-</script></section></section><section  data-markdown><script type="text/template">
+Functions store blocks of code that can be called and executed at any time as often as needed.
+
+- Where are functions used?
+- What is the general flow of code?
+- Why no parameters?
+</script></section><section  data-markdown><script type="text/template">
+# Conditional Statements
+
+Conditional statements control the flow of your programs. They allow programs to make decisions. What kinds of decisions does the Break Out code make? 
+
+- Where are conditional statements used? 
+</script></section><section  data-markdown><script type="text/template">
+# Name Space and Identifiers
+
+Identifiers are the names of you create that represent: variables, and functions.
+
+Scope sets the rules for where an indentifier can be created and accessed. 
+
+The code needs some improvement. Currently the game creates many identifiers in the global name space. 
+
+- Is this a problem? 
+- What kinds of problems could this cause? 
+</script></section><section  data-markdown><script type="text/template">
+# Scope
+
+Use an IIFE to organize your code. 
+
+- What is an IIFE?
+- What is scope? 
+    - global
+    - local
+    - function
+    - block
+</script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="#087CB8" -->
-## [**10m**] BREAK
-</script></section><section ><section data-markdown><script type="text/template">
-# Topic 2
-</script></section><section data-markdown><script type="text/template">
-## Overview/TT II (optional) (20 min)
-</script></section><section data-markdown><script type="text/template">
-## In Class Activity II (optional) (30 min)
-</script></section></section><section  data-markdown><script type="text/template">
+## BREAK
+
+Take a 10 minute break.
+</script></section><section  data-markdown><script type="text/template">
+## Expanding the game
+
+How would you solve these problems. Discuss these with someone else in class. 
+
+1. Each brick must display it's own color?
+2. Each brick is worth different point values?
+3. The ball should move faster as the game progresses?
+4. The ball needs to start at a random angle?
+5. Imagine each time the bricks are cleared a new row of bricks is added?
+6. Imagine bricks take more than one hit to remove? 
+7. One brick is special, when hit it releases a second ball? 
+</script></section><section  data-markdown><script type="text/template">
+### OOP
+
+Many of the problems above require the creation of new variables. This starts to make the game impossible to work with. 
+
+While you could arrays of variables this would be hard to understand. 
+
+Object Oriented Programming gives us a style and tools to treat our code like Objects in the real world. Instead of creating new variables and functions to handle new elements and systems we would create new objects that embody those systems and elements. 
+</script></section><section  data-markdown><script type="text/template">
+Objects on software are analogous to objects in the real world. 
+
+Discuss: Name some Objects that you use every day, name their properties, and methods?
+</script></section><section  data-markdown><script type="text/template">
+#### This
+
+When code refers to Objects, their properties, and namespace there are opportunities to infer the which object you are refering to. 
+
+`this`
+
+The key word this is used for that purpose. 
+</script></section><section  data-markdown><script type="text/template">
+Here an object with x and dx properties also has a function move.
+
+```JS
+ball = {
+  x: 100,
+  dx: 2,
+  move: function() {
+    this.x += this.dx
+  }
+}
+```
+
+Within the move function the object can refer to it's own properties using the `this` keyword.
+</script></section><section  data-markdown><script type="text/template">
+# Challenges
+</script></section><section  data-markdown><script type="text/template">
+**Challenge 1**
+
+Make an Object for the ball. It should have 4 properties: 
+
+- `x`
+- `y`
+- `dx`
+- `dy`
+</script></section><section  data-markdown><script type="text/template">
+**Challenge 2**
+
+Give the ball object a move method. This method should calculate the new x and y position by adding the dx and dy. 
+
+- `move()`
+
+This function should add x + dx, and y + dy of the ball object. 
+</script></section><section  data-markdown><script type="text/template">
+**Challenge 3**
+
+Use the ball object in your game.
+
+Find each of the variables: x, y, dx, dy replace these with ball.x, ball.y, ball.dx, ball.dy.
+</script></section><section  data-markdown><script type="text/template">
+**Challenge 4**
+
+The game has created a lot of global variables it would be good if these were consolidated into a single namespace. Creating only a single object that groups all of these together.
+
+Create an object that owns all of the variables that were originally global. 
+</script></section><section  data-markdown><script type="text/template">
+**Challenge 5** 
+
+Consolidate all of the functions into your game object.
+
+```JS 
+
+{
+  bricks: [],
+  canvas:  document.getElementById("myCanvas"),
+  ctx: canvas.getContext("2d"),
+  ...
+  drawBall: function() {
+    ctx.beginPath(),
+    ...
+  },
+  ...
+}
+
+```
+</script></section><section  data-markdown><script type="text/template">
+**Challenge 6** 
+
+Create a function that draws something interesting on the background of the game.
+
+This functions needs to be useful outside of the game. You can make this possible by passing ctx and any other values needed into this function as parameters. 
+</script></section><section  data-markdown><script type="text/template">
 ## Wrap Up (5 min)
 
-- 
+- Review
 </script></section><section  data-markdown><script type="text/template">
 ## Additional Resources
 
-1. Links to additional readings and videos
+1. 
 </script></section><section  data-markdown><script type="text/template">
 ## Minute-by-Minute [OPTIONAL]
 
-| **Elapsed** | **Time**  | **Activity**              |
-| ----------- | --------- | ------------------------- |
-| 0:00        | 0:05      | Objectives                |
-| 0:05        | 0:15      | Overview                  |
-| 0:20        | 0:30      | In Class Activity I       |
-| 0:50        | 0:10      | BREAK                     |
-| 1:00        | 0:45      | In Class Activity II      |
-| 1:45        | 0:05      | Wrap up review objectives |
-| TOTAL       | 1:50      | -                         |
+| **Elapsed** | **Time** | **Activity** |
+| ----------- | --------- | ----------- |
+| 0:05 | 0:05 | Admin |
+| 0:05 | 0:10 | [Objectives](#learning-objectives) |
+| 0:05 | 0:15 | [Discuss Break tutorial](#discuss-nreak-tutorial) |
+| 0:05 | 0:20 | [Arrays](#arrays) |
+| 0:05 | 0:25 | [Loops](#loops) |
+| 0:05 | 0:30 | [Functions](#functions) |
+| 0:05 | 0:35 | [Objects](#objects) |
+| 0:05 | 0:40 | [Conditional](#conditional) |
+| 0:05 | 0:45 | [Name Space and Identifiers](#name-space-and-identifiers) |
+| 0:05 | 0:50 | [Scope](#scope) |
+| 0:10 | 1:00 | BREAK |
+| 0:10 | 1:10 | [Expanding the game](#expanding-the-game) |
+| 0:10 | 1:20 | [OOP](#oop) |
+| 0:60 | 2:20 | [Challenges](#challenges) |
+| TOTAL | 1:50 | - |
 
 </script></section></div>
     </div>
