updated slides lesson 4

--- a/Slides/Lesson-03.html
+++ b/Slides/Lesson-03.html
@@ -18,7 +18,7 @@
   <body>
     <div class="reveal">
       <div class="slides"><section  data-markdown><script type="text/template"><!-- .slide: data-background="./Images/header.svg" data-background-repeat="none" data-background-size="40% 40%" data-background-position="center 10%" class="header" -->
-# FEW 1.2 - Lesson 3 - JavaScript Language
+# FEW 1.2 - Lesson 3 - JavaScript Language - OOP
 
 <!-- Put a link to the slides so that students can find them -->
 
@@ -41,10 +41,10 @@ JavaScript is one of the most important languages in use today. It's ubiquitous,
 Discuss these questions with someone else in class:
 
 - How does the break out game work? (general overview)
-    - Code flow what happens in what order?
-- Application state is the data that describes the state of your application. 
-    - How does break out define its application state?
-    - The values stored by the game and how are they updated?
+ - Code flow what happens in what order?
+- The application state is the data that describes the state of your application. 
+ - How does break out define its application state?
+ - The values stored by the game and how are they updated?
 </script></section><section  data-markdown><script type="text/template">
 # loops 
 
@@ -57,7 +57,7 @@ The great thing about computers is they are happy to do things over and over aga
 </script></section><section  data-markdown><script type="text/template">
 # Arrays
 
-Arrays store collections of related data in an a list with each element at an index.  
+Arrays store collections of related data in a list with each element at an index. 
 
 - How are arrays used by Break Out?
 - What do the Arrays store? 
@@ -66,7 +66,7 @@ Arrays store collections of related data in an a list with each element at an in
 </script></section><section  data-markdown><script type="text/template">
 # Objects 
 
-Objects are collections of related data. Each value is stored at a key or label.  
+Objects are collections of related data. Each value is stored at a key or label. 
 
 - Where are objects used? 
 - How are the Objects used? 
@@ -92,9 +92,9 @@ Conditional statements control the flow of your programs. They allow programs to
 
 Identifiers are the names of you create that represent: variables, and functions.
 
-Scope sets the rules for where an indentifier can be created and accessed. 
+Scope sets the rules for where an identifier can be created and accessed. 
 
-The code needs some improvement. Currently the game creates many identifiers in the global name space. 
+The code needs some improvement. Currently, the game creates many identifiers in the global namespace. 
 
 - Is this a problem? 
 - What kinds of problems could this cause? 
@@ -105,35 +105,35 @@ Use an IIFE to organize your code.
 
 - What is an IIFE?
 - What is scope? 
-    - global
-    - local
-    - function
-    - block
+ - global
+ - local
+ - function
+ - block
 </script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="#087CB8" -->
 ## BREAK
 
-Take a 10 minute break.
+Take a 10-minute break.
 </script></section><section  data-markdown><script type="text/template">
 ## Expanding the game
 
-How would you solve these problems. Discuss these with someone else in class. 
+How would you solve these problems? Discuss these with someone else in class. 
 
-1. Each brick must display it's own color?
+1. Each brick must display its own color?
 2. Each brick is worth different point values?
 3. The ball should move faster as the game progresses?
 4. The ball needs to start at a random angle?
 5. Imagine each time the bricks are cleared a new row of bricks is added?
 6. Imagine bricks take more than one hit to remove? 
-7. One brick is special, when hit it releases a second ball? 
+7. One brick is special when hit it releases a second ball? 
 </script></section><section  data-markdown><script type="text/template">
 ### OOP
 
 Many of the problems above require the creation of new variables. This starts to make the game impossible to work with. 
 
-While you could arrays of variables this would be hard to understand. 
+While you could use an array of values this would be hard to understand. 
 
-Object Oriented Programming gives us a style and tools to treat our code like Objects in the real world. Instead of creating new variables and functions to handle new elements and systems we would create new objects that embody those systems and elements. 
+Object-Oriented Programming gives us style and tools to treat our code like Objects in the real world. Instead of creating new variables and functions to handle new elements and systems we would create new objects that embody those systems and elements. 
 </script></section><section  data-markdown><script type="text/template">
 Objects on software are analogous to objects in the real world. 
 
@@ -141,25 +141,25 @@ Discuss: Name some Objects that you use every day, name their properties, and me
 </script></section><section  data-markdown><script type="text/template">
 #### This
 
-When code refers to Objects, their properties, and namespace there are opportunities to infer the which object you are refering to. 
+When code refers to Objects, their properties, and namespace there are opportunities to infer the which object you are referring to. 
 
 `this`
 
-The key word this is used for that purpose. 
+The keyword `this` is used for that purpose. 
 </script></section><section  data-markdown><script type="text/template">
 Here an object with x and dx properties also has a function move.
 
 ```JS
 ball = {
-  x: 100,
-  dx: 2,
-  move: function() {
-    this.x += this.dx
-  }
+ x: 100,
+ dx: 2,
+ move: function() {
+ this.x += this.dx
+ }
 }
 ```
 
-Within the move function the object can refer to it's own properties using the `this` keyword.
+Within the move function, the object can refer to its own properties using the `this` keyword.
 </script></section><section  data-markdown><script type="text/template">
 # Challenges
 </script></section><section  data-markdown><script type="text/template">
@@ -199,15 +199,15 @@ Consolidate all of the functions into your game object.
 ```JS 
 
 {
-  bricks: [],
-  canvas:  document.getElementById("myCanvas"),
-  ctx: canvas.getContext("2d"),
-  ...
-  drawBall: function() {
-    ctx.beginPath(),
-    ...
-  },
-  ...
+ bricks: [],
+ canvas: document.getElementById("myCanvas"),
+ ctx: canvas.getContext("2d"),
+ ...
+ drawBall: function() {
+ ctx.beginPath(),
+ ...
+ },
+ ...
 }
 
 ```
